# pyhuum

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: codeql-analysis.yml  tests.yml
huum/: const.py  exceptions.py  huum.py  schemas.py  settings.py
tests/: test_api.py  test_const.py  test_huum.py  utils.py
