[tool.poetry]
name = "huum"
version = "0.7.7"
description = "Python library for Huum saunas"
authors = ["Frank Wickström <frwickst@gmail.com>"]
repository = "https://github.com/frwickst/pyhuum"
readme = "README.md"

[tool.poetry.dependencies]
aiohttp = { version = "^3.9.1", optional = true }
black = "^23.12.1"
mashumaro = "^3.11"
python = "^3.9"
ruff = "^0.1.9"

[tool.poetry.extras]
aiohttp = ["aiohttp"]

[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["huum", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
select = ["E4", "E7", "E9", "F", "T20", "B", "ERA", "PIE"]
line-length = 104
ignore = ["E203", "E501", "B007", "B026", "B904", "PIE808"]
