[tool.poetry]
name = "huum"
version = "0.7.10"
description = "Python library for Huum saunas"
authors = ["Frank Wickström <frwickst@gmail.com>"]
repository = "https://github.com/frwickst/pyhuum"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">3.9,<3.13"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
mashumaro = "^3.13.1"

[tool.poetry.extras]
aiohttp = ["aiohttp"]

[tool.poetry.dev-dependencies]
ruff = "^0.5.1"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["huum", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
line-length = 104
lint.select = ["E4", "E7", "E9", "F", "G", "T20", "TRY004", "TRY302", "TRY400", "B", "ERA", "PIE", "I"]
lint.ignore = ["E203", "E501", "B007", "B026", "B904", "PIE808"]
